--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,7 +19,9 @@ jobs:
   build:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
-    
+    defaults:
+      run:
+        working-directory: nz-covid-loi
     strategy:
       matrix:
         node_version: ['14.x']
@@ -31,7 +33,7 @@ jobs:
       - name: Use Node.js ${{ matrix.node-verison }}
         uses: actions/setup-node@v1
         with:
-          node-version: ${{ matrix.node-version}}
+          node-version: ${{ matrix.node-version }}
       - name: Cache
         uses: actions/cache@v2.1.6
         with:
