--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -50,7 +50,7 @@ jobs:
         run: |
           git config --global user.name  $user_name
           git config --global user.email $user_email
-          git remote set-url origin https://${github_toiken}@github.com/${repository}
+          git remote set-url origin https://${github_token}@github.com/${repository}
           npm run deploy
         working-directory: nz-covid-loi
         env:
